fix alignment

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -6,6 +6,7 @@ body {
   font-family: $font;
   background-color: color(light-grayish-cyan);
   padding-top: 50px;
+  min-height: 100vh;
 }
 
 .header__logo {
@@ -32,6 +33,7 @@ body {
     flex-direction: row;
     padding: 32px 32px;
     max-width: 920px;
+    margin-bottom: 240px;
   }
 }
 
